[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upkit"
version = "0.1.0"
description = "A Pythonic ROOT analysis, plotting, and fitting library for nuclear/particle physics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Leo Martinez", email = "lmart470@fiu.edu" }]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "iminuit>=2.17",
    "vector>=0.9",
    "uproot>=5.0",
    "pandas>=1.5",
    "awkward>=2.0",
    "h5py>=3.8",
    "numba>=0.58",
]

[tool.setuptools.packages.find]
where = ["src"]
